--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
           <p>
             Nós criamos treinos <strong>exclusivos e únicos para você.</strong> <br>
-            Invista no seu corpo e <strong>tenha muito mais performance </strong> e qualidade de vida.
+            Invista no seu corpo e <strong>tenha muito mais performance </strong> e <br> qualidade de vida.
           </p>
 
           <button><img src="image/whats.svg" alt="Logo WhatsAPP">Comece já</button>
